<resources>
    <string name="app_name">Google_page</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">Username</string>
    <string name="Pass">Password</string>
    <string name="confirm">Confirm</string>
    <string name="next">Next</string>
    <string name="forget">First name</string>
    <string name="title_activity_2">activity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>